--- a/css/styles.css
+++ b/css/styles.css
@@ -8,9 +8,9 @@ body{
 .canvas{
     background-color: beige;
     margin: 0px auto 0px auto;
-    width: 50%;
+    width: 100%;
     text-align: center;
-    box-sizing: border-box;
+    box-sizing: boder-box;
 }
 
 .top{
@@ -20,12 +20,12 @@ body{
 .top-img{
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
-    width: 48%;
+    
     box-sizing: border-box;
 }
 .middle{
     text-align: left;
-    width: 48%;
+    
     background-color: beige;
     margin: 0px auto 10px auto;
     box-sizing: border-box;
@@ -55,7 +55,7 @@ p{
 
 .bottom{
     text-align: left;
-    width: 48%;
+    
     margin: 0px auto 10px auto;
     position: relative;
     box-sizing: border-box;
@@ -79,6 +79,7 @@ span{
   padding: 15px 70px 15px 70px;
   text-decoration: none;
   box-sizing: border-box;
+   width: 83.333%;
 }
 
 .btn:hover {
@@ -89,10 +90,6 @@ span{
   background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
   background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
   text-decoration: none;
-}
-a{
-    text-align: center;
-    box-sizing: border-box;
 }
 
 
@@ -111,7 +108,7 @@ body{
 .canvas{
     background-color: beige;
     margin: 0px auto 0px auto;
-    width: 50%;
+    width: 100%;
     text-align: center;
     box-sizing: border-box;
 }
@@ -123,13 +120,13 @@ body{
 .top-img{
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
-    width: 48%;
+    width: 100%;
     box-sizing: border-box;
 }
 .middle{
     text-align: left;
-    width: 48%;
     background-color: beige;
+    width: 83.333%;
     margin: 0px auto 10px auto;
     box-sizing: border-box;
 }
@@ -158,7 +155,7 @@ p{
 
 .bottom{
     text-align: left;
-    width: 48%;
+     width: 83.333%;
     margin: 0px auto 10px auto;
     position: relative;
     box-sizing: border-box;
@@ -182,6 +179,7 @@ span{
   padding: 15px 70px 15px 70px;
   text-decoration: none;
   box-sizing: border-box;
+   width: 83.333%;
 }
 
 .btn:hover {
@@ -192,9 +190,5 @@ span{
   background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
   background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
   text-decoration: none;
-}
-a{
-    text-align: center;
-    box-sizing: border-box;
 }
 }
