--- a/css/styles.css
+++ b/css/styles.css
@@ -97,7 +97,7 @@ span{
 
 
 /**********For MOBILE SCREEN*************/
-@media screen and (min-width: 375px) {
+@media screen and (max-width: 375px) {
 body{
     text-align: center;
     margin-bottom: 60px;
