--- a/css/styles.css
+++ b/css/styles.css
@@ -1,71 +1,74 @@
+
+
+/**********For MOBILE SCREEN*************/
+@media screen and (min-width: 375px) {
 body{
+    margin: 0;
     text-align: center;
-    margin-bottom: 60px;
-    background-color: beige;
-    font-size: 14px;
+    background-color:#F2EBE3 ;
 }
 
-.canvas{
-    background-color: beige;
-    margin: 0px auto 0px auto;
-    width: 100%;
-    text-align: center;
-    box-sizing: boder-box;
-}
-
-.top{
-    margin-top: 10px;
-    box-sizing: border-box;
-}
-.top-img{
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-    
-    box-sizing: border-box;
-}
-.middle{
+.background{
+    background-color:white ;
+    width: 50%;
+    height: 50%;
+    margin: 10px 25%;
+    padding-right: 20px;
+    padding-bottom: 70px;
+    line-height: 2;
     text-align: left;
-    
-    background-color: beige;
-    margin: 0px auto 10px auto;
-    box-sizing: border-box;
+    font-size: large;
 }
+
+.top-img{
+    width: 50%;
+    border: 50px;
+    float: left;
+    margin-right: 50px;
+}
+
 .h1-1{
     font-family: 'Fraunces', serif;
     font-weight: 700;
-    box-sizing: border-box;
+    margin: none;
+    line-height: 1;
+
 }
+
 .h1-2{
     display: inline-block;
     font-family: 'Fraunces', serif;
     font-weight: 700;
     color: #3c8067;
-    box-sizing: border-box;
+    margin: none;
+    padding: none;
+    border: none;
+    margin-right: 50px;
 }
 h3{
     font-family: 'Montserrat', sans-serif;
-    font-weight: 700;
-    box-sizing: border-box;
+    font-weight: 500;
+    margin: none;
+    letter-spacing: 7px;
+    padding-top: 30px;
+    color: #6C7289;
 }
 p{
     font-family: 'Montserrat', sans-serif;
-    font-weight: 500;
-    box-sizing: border-box;
+    font-weight: 700;
+    margin: none;
+    line-height: 1.5;
+    color: #6C7289;
+ 
 }
 
-.bottom{
-    text-align: left;
-    
-    margin: 0px auto 10px auto;
-    position: relative;
-    box-sizing: border-box;
-}
 span{
     text-decoration: line-through;
-    position: absolute ;
-    margin: 10px 20px;
+    margin: 30px 30px 50px 30px;
     font-family: 'Montserrat', sans-serif;
     font-size: 15px;
+    position: absolute;
+
 }
 .btn {
   -webkit-border-radius: 9;
@@ -91,81 +94,77 @@ span{
   background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
   text-decoration: none;
 }
+}
 
-
-
-
-
-/**********For MOBILE SCREEN*************/
-@media screen and (max-width: 375px) {
+/*************NORMAL WINDOW****************/
+@media screen and (min-width: 1440px) {
 body{
+    margin: 0;
     text-align: center;
-    margin-bottom: 60px;
-    background-color: beige;
-    font-size: 14px;
+    background-color:#F2EBE3 ;
 }
 
-.canvas{
-    background-color: beige;
-    margin: 0px auto 0px auto;
-    width: 100%;
-    text-align: center;
-    box-sizing: border-box;
-}
-
-.top{
-    margin-top: 10px;
-    box-sizing: border-box;
-}
-.top-img{
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-    width: 100%;
-    box-sizing: border-box;
-}
-.middle{
+.background{
+    background-color:white ;
+    width: 50%;
+    height: 50%;
+    margin: 10px 25%;
+    padding-right: 20px;
+    padding-bottom: 70px;
+    line-height: 2;
     text-align: left;
-    background-color: beige;
-    width: 83.333%;
-    margin: 0px auto 10px auto;
-    box-sizing: border-box;
+    font-size: large;
 }
+
+.top-img{
+    width: 50%;
+    border: 50px;
+    float: left;
+    margin-right: 50px;
+}
+
 .h1-1{
     font-family: 'Fraunces', serif;
     font-weight: 700;
-    box-sizing: border-box;
+    margin: none;
+    line-height: 1;
+
 }
+
 .h1-2{
     display: inline-block;
     font-family: 'Fraunces', serif;
     font-weight: 700;
     color: #3c8067;
-    box-sizing: border-box;
+    margin: none;
+    padding: none;
+    border: none;
+    margin-right: 50px;
 }
 h3{
     font-family: 'Montserrat', sans-serif;
-    font-weight: 700;
-    box-sizing: border-box;
+    font-weight: 500;
+    margin: none;
+    letter-spacing: 7px;
+    padding-top: 30px;
+    color: #6C7289;
 }
 p{
     font-family: 'Montserrat', sans-serif;
-    font-weight: 500;
-    box-sizing: border-box;
+    font-weight: 700;
+    margin: none;
+    line-height: 1.5;
+    color: #6C7289;
+ 
 }
 
-.bottom{
-    text-align: left;
-     width: 83.333%;
-    margin: 0px auto 10px auto;
-    position: relative;
-    box-sizing: border-box;
-}
 span{
     text-decoration: line-through;
-    position: absolute ;
-    margin: 10px 20px;
+    margin: 30px 30px 50px 30px;
     font-family: 'Montserrat', sans-serif;
     font-size: 15px;
+    position: absolute;
+
 }
 .btn {
   -webkit-border-radius: 9;
